--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        header
+    </header>
+    <div class="Gallery">
+        <img src="sd.jpg" alt="">
+    </div>
     <footer>
         footer
     </footer>
